<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context="com.denisudotgmail.stopwatch.StopwatchActivity">

    <TextView
        android:id="@+id/my_chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        />
    <Button
        android:text="@string/start"
        android:background="@drawable/start_button"
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_chronometer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickStart"
        />
    <Button
        android:id="@+id/stop_button"
        android:background="@drawable/stop_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickStop"
        android:text="@string/stop"
        />
    <Button
        android:id="@+id/reset_button"
        android:background="@drawable/reset_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stop_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickReset"
        android:text="@string/reset"/>
    <Button
        android:background="@drawable/setup_button"
        android:id="@+id/setup_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_button"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/setup"
        android:onClick="onClickSetUp"/>

</RelativeLayout>
