<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    tools:context="com.denisudotgmail.stopwatch.SetUpActivity">
    <GridLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="5">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="0"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:textColor="@color/fontColor"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/round_duration"/>
    <TextView
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/stopButton"
        android:text="@string/hour_min_sec"/>
    <NumberPicker
        android:id="@+id/roundDurationHours"
        android:layout_gravity=""
        android:layout_row="2"
        android:solidColor="@color/colorPrimary"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <NumberPicker
        android:id="@+id/roundDurationMinutes"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:layout_column="2"
        android:solidColor="@color/colorPrimary"
        android:layout_columnSpan="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />
    <NumberPicker
        android:id="@+id/roundDurationSeconds"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:solidColor="@color/colorPrimary"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:textColor="@color/fontColor"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnSpan="3"
        android:text="@string/rest_duration"/>
    <TextView
        android:layout_row="4"
        android:layout_margin="5dp"
        android:layout_column="1"
        android:textSize="20dp"
        android:textColor="@color/stopButton"
        android:layout_columnSpan="3"
        android:layout_gravity="center_horizontal|top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_min_sec"/>
    <NumberPicker
        android:solidColor="@color/colorPrimary"
        android:id="@+id/restDurationHours"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="1"/>
    <NumberPicker
        android:solidColor="@color/colorPrimary"
        android:id="@+id/restDurationMinutes"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_columnSpan="1"/>
    <NumberPicker
        android:solidColor="@color/colorPrimary"
        android:id="@+id/restDurationSeconds"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="3"
        android:layout_columnSpan="1" />
    <TextView
        android:textColor="@color/fontColor"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_margin="5dp"
        android:layout_columnSpan="3"
        android:text="@string/number_of_rounds"/>
    <NumberPicker
        android:solidColor="@color/colorPrimary"
        android:id="@+id/numberOfRound"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="7"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"/>

    <Button
        android:background="@drawable/ok_button"
        android:id="@+id/ok_button"
        android:layout_column="1"
        android:layout_row="8"
        android:layout_columnSpan="3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/ok"
        android:onClick="onClickOk"
        />
    <Button
        android:background="@drawable/cancel_button"
        android:id="@+id/cancel_button"
        android:layout_width="200dp"
        android:layout_row="9"
        android:layout_columnSpan="3"
        android:layout_column="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/reset"
        android:onClick="onClickCancel"
        />

</GridLayout>
</ScrollView>